fixed tooltip spacing

--- a/assets/animate.css
+++ b/assets/animate.css
@@ -1578,6 +1578,7 @@
 
 @-webkit-keyframes fadeInUp {
   from {
+    animation-delay: 2s;
     opacity: 0;
     -webkit-transform: translate3d(0, 100%, 0);
     transform: translate3d(0, 100%, 0);
